# wem

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: main.rs
