[package]
name = "wem"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.0-rc.1"
futures-util = "0.3"
walkdir = "2"
itertools = "0.10"
